projet-fin-module/manifests/network/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mbened-dev
  labels:
    app: openshift-3tiers
