projet-fin-module/manifests/network/03-networkpolicy-deny-all.yaml
# NetworkPolicy — Zero Trust avec exceptions nécessaires
# Bloque tout le trafic par défaut MAIS autorise DNS et communication interne
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: mbened-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    # Autoriser DNS — sans ça rien ne fonctionne
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Autoriser la communication interne entre pods
    - to:
        - podSelector: {}
    # Autoriser l'accès à l'API OpenShift
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443
  ingress:
    # Autoriser la communication interne entre pods
    - from:
        - podSelector: {}
    # Autoriser OpenShift console et terminal
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-console
